# EMAS

./: .env.example  .gitignore  Cargo.toml  README.md
src/: agent.rs  arena.rs  config.rs  evolution.rs  genotype.rs  knowledge.rs  lib.rs  llm.rs  main.rs  orchestrator.rs  team.rs
src/tui/: app.rs  mod.rs  ui.rs
