[package]
name = "emas"
version = "0.1.0"
edition = "2021"
description = "Evolutionary Multi-Agent System - Evolve AI reasoning through natural selection"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
dirs = "5"
futures = "0.3"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
